functionality of clear history button added